test/bad/array_length.lat
int main() {
    int[] a = new int[10];
    string s = a.length;
}
